--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
     margin: 0;
     font-family: 'Segoe UI', sans-serif;
-    background-color: #0a0a0a;
+    background: linear-gradient(135deg, #ff4da6, #ffe6f0);
+    background-attachment: fixed;
+    background-size: cover;
     color: #fff;
 }
 
