--- a/css/style.css
+++ b/css/style.css
@@ -157,10 +157,12 @@ main {
 
 .thumbnail {
     width: 100%;
+    height: auto;
     max-height: 250px;
     object-fit: cover;
     border-radius: 8px;
     margin-bottom: 1rem;
+    display: block;
 }
 
 .post-nav {
@@ -256,6 +258,12 @@ main p {
     nav {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .thumbnail {
+        max-width: 100%;
+        height: auto;
+        margin-bottom: 1rem;
     }
 
     .nav-links {
