--- a/css/style.css
+++ b/css/style.css
@@ -255,6 +255,7 @@ main p {
 }
 
 @media (max-width: 768px) {
+
     nav {
         flex-direction: column;
         align-items: flex-start;
@@ -305,11 +306,15 @@ main p {
 
     .blog-posts {
         margin-top: 4rem;
-        padding: 2rem;
+        padding: 1.5rem 1rem;
         background-color: #111;
         border: 1px solid #ff3399;
         border-radius: 8px;
         box-shadow: 0 2px 6px rgba(255, 51, 153, 0.3);
+    }
+
+    .blog-posts .post {
+        padding: 1.5rem 1rem;
     }
 
     section + section {
@@ -326,6 +331,13 @@ main p {
         font-size: 1.1rem;
         line-height: 1.6;
         color: #fff;
+    }
+
+    .blog-posts .post a:hover {
+        color: #fff;
+        text-decoration: underline;
+        transform: translateX(4px);
+        transition: all 0.3s ease;
     }
 }
 
